# abb_libegm

./: CMakeLists.txt  egm_wrapper.proto
.github/workflows/: windows-vcpkg.yml
cmake/: FindAsio.cmake
include/abb_libegm/: egm_base_interface.h  egm_common_auxiliary.h  egm_controller_interface.h  egm_interpolator.h  egm_trajectory_interface.h  egm_udp_server.h
src/: egm_base_interface.cpp  egm_common_auxiliary.cpp  egm_controller_interface.cpp  egm_trajectory_interface.cpp  egm_udp_server.cpp
src_crosscompiling/: egm.pb.cc  egm.pb.h  egm_wrapper.pb.cc  egm_wrapper.pb.h  egm_wrapper_trajectory.pb.cc  egm_wrapper_trajectory.pb.h
